add support read efuse chip_id and user_id
Change-Id: I9bc31be6e38047816a8f8a424cd8a357bc4d88a7

--- a/README
+++ b/README
@@ -60,6 +60,11 @@ cat x-loader-xxx.bin u-boot.bin > xxx.bin
 boards/BOARD_NAME/board.c中board_init()用于在引导前对板子
 进行初始化，当然也可以没有
 
+如何使用efuse的读功能？
+= = = = = = = = = = = = = =
+打开boards/BOARD_NAME/board.mk, 修改CONFIG_EFUSE := y
+定义一个buf, 然后调用 efuse_read() 函数，重用编译
+
 烧录什么文件？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 编译完成会有提示：“Image: xxxxxx” is ready
