--- a/README
+++ b/README
@@ -65,6 +65,13 @@ boards/BOARD_NAME/board.c中board_init()用于在引导前对板子
 include/configs/boards_common.h为默认值
 打开板极头文件BOARD.h，去定义默认值再重新定义期望值
 
+如何修改串口号以及波特率？
+＝＝＝＝＝＝＝＝＝＝＝＝＝＝
+打开include/configs/BOARD_NAME.h
+修改：
+#define CONFIG_CONSOLE_BAUDRATE      3000000
+#define CONFIG_CONSOLE_INDEX         2
+
 烧录什么文件？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 编译完成会有提示：“Image: xxxxxx” is ready
