--- a/README
+++ b/README
@@ -67,10 +67,12 @@ include/configs/boards_common.h为默认值
 
 如何修改串口号以及波特率？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-打开include/configs/BOARD_NAME.h
+1.打开include/configs/BOARD_NAME.h
 修改：
 #define CONFIG_CONSOLE_BAUDRATE      3000000
 #define CONFIG_CONSOLE_INDEX         2
+2.打开boards/BOARD_NAME/board.c
+在board_early_init()中将对应串口IO设置为串口功能(参考X1000/X1500 DS手册)
 
 烧录什么文件？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
