--- a/README
+++ b/README
@@ -74,6 +74,16 @@ include/configs/boards_common.h为默认值
 2.打开boards/BOARD_NAME/board.c
 在board_early_init()中将对应串口IO设置为串口功能(参考X1000/X1500 DS手册)
 
+系统没有32KHz晶振怎么启动？
+＝＝＝＝＝＝＝＝＝＝＝＝＝＝
+打开include/configs/BOARD_NAME.h
+增加定义：#define CONFIG_RTCCLK_SEL
+
+如何添加recovery引导功能？
+＝＝＝＝＝＝＝＝＝＝＝＝＝＝
+打开include/configs/BOARD_NAME.h
+增加定义：#define CONFIG_RECOVERY
+
 烧录什么文件？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 编译完成会有提示：“Image: xxxxxx” is ready
