--- a/README
+++ b/README
@@ -74,7 +74,7 @@ include/configs/boards_common.h为默认值
 2.打开boards/BOARD_NAME/board.c
 在board_early_init()中将对应串口IO设置为串口功能(参考X1000/X1500 DS手册)
 
-系统没有32KHz晶振怎么启动？
+系统没有32KHz晶振如何休眠唤醒？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 打开include/configs/BOARD_NAME.h
 增加定义：#define CONFIG_RTCCLK_SEL
