--- a/README
+++ b/README
@@ -110,7 +110,7 @@ include/configs/boards_common.h为默认值
 默认timeout为1000ms
 通过#define CONFIG_WDT_TIMEOUT_MS修改默认值
 
-如何进入低功耗状态？
+x-loader中如何进入低功耗状态？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 打开include/configs/BOARD_NAME.h
 增加定义：#define CONFIG_PM_SUSPEND
