--- a/README
+++ b/README
@@ -123,7 +123,7 @@ x-loader中如何进入USB烧录模式？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 打开include/configs/BOARD_NAME.h
 增加定义：#define CONFIG_SOFT_BURN
-在适当位置调用jump_to_usbboot();机器会重启进入烧录模式
+在适当位置调用set_jump_to_usbboot();机器会重启进入烧录模式
 
 烧录什么文件？
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
